--- a/spring-cloud-in-action/microservice-discovery-eureka/src/main/resources/application.yml
+++ b/spring-cloud-in-action/microservice-discovery-eureka/src/main/resources/application.yml
@@ -1,14 +1,14 @@
-security:
-  basic:
-    enabled: true
-  user:
-    name: user
-    password: password123
+#security:
+#  basic:
+#    enabled: true
+#  user:
+#    name: user
+#    password: password123
 server:
-  port: 8761
+  port: 10001
 eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
-    service-url:
-      defaultZone: http://user:password123@localhost:8761/eureka
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
